<resources>
    <string name="app_name">Tarbak Siswa</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa password</string>
    <string name="masuk">Masuk</string>
    <string name="belum_memiliki_akun">Belum memiliki akun?</string>
    <string name="hubungi_pihak_sekolah_untuk_mendapatkan_akses_aplikasi">Hubungi pihak sekolah untuk mendapatkan akses aplikasi.</string>
    <string name="yayasan_ntaruna_bakti">Yayasan \nTaruna Bakti</string>
    <string name="praktek_membuat_kita_benar_pengulangan_nmembuat_kita_sempurna">Praktek membuat kita benar, pengulangan\nmembuat kita sempurna.</string>
    <string name="logo">Logo</string>
    <string name="login_image">login_image</string>
    <string name="pelajaran">Pelajaran</string>
    <string name="pesan">Pesan</string>
    <string name="akun">Akun</string>
    <string name="kompetensi_dasar">Kompetensi Dasar</string>
    <string name="pelaksanaan">Pelaksanaan</string>
    <string name="nilai">Nilai</string>
    <string name="_100">/100</string>
    <string name="semester">Semester</string>
    <string name="buka">Buka</string>
    <string name="mapel_icon">Mapel Icon</string>
    <string name="semua">Semua</string>
    <string name="ganjil">Ganjil</string>
    <string name="genap">Genap</string>
    <string name="back">back</string>
    <string name="tidak_ada_data_ditemukan">Tidak ada data ditemukan.</string>
    <string name="fingerprint">fingerprint</string>
    <string name="image">image</string>
    <string name="detail_penilaian">Detail Penilaian</string>
    <string name="pemberitahuan">Pemberitahuan</string>
    <string name="ubah_data_profile">Ubah Data Profile</string>
    <string name="nis">NIS</string>
    <string name="nama">Nama</string>
    <string name="kelas">Kelas</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="ubah_profile">Ubah Profile</string>
    <string name="data_pribadi">Data Pribadi</string>
    <string name="ubah_data">Ubah Data</string>
    <string name="agama">Agama</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="email">Email</string>
    <string name="keamanan_akun">Keamanan Akun</string>
    <string name="bintang">*******</string>
    <string name="login_menggunakan_sidik_jari">Login menggunakan sidik jari</string>
    <string name="keluar">Keluar</string>
    <string name="mata_pelajaran">Mata Pelajaran</string>
    <string name="sd_taruna_bakti">SD Taruna Bakti</string>
    <string name="belum_ada_pesan_masuk_nih">Belum ada pesan masuk nih.</string>
    <string name="kamu_belum_mendapatkan_n_notifikasi_sama_sekali">Kamu belum mendapatkan\n notifikasi sama sekali.</string>
    <string name="inbox">Inbox</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="buka_classroom">Buka Classroom</string>
    <string name="doc_icon">doc icon</string>
    <string name="lihat_penilaian">Lihat Penilaian</string>
    <string name="_0">0</string>
    <string name="icon_notification">icon notification</string>
</resources>