<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:overScrollMode="never"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="27dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:src="@drawable/logo_tarbak"
                android:contentDescription="@string/logo" />
            <TextView
                android:layout_marginStart="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yayasan_ntaruna_bakti"/>
        </LinearLayout>
        <ImageView
            android:layout_marginTop="6dp"
            android:layout_width="257dp"
            android:layout_height="182dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/login_image"
            android:contentDescription="@string/login_image" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginTop="13dp"
            android:text="@string/praktek_membuat_kita_benar_pengulangan_nmembuat_kita_sempurna"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@drawable/login_bottom_background"
            android:layout_marginTop="26dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="46dp"
                android:layout_marginStart="33dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/masuk"/>
            <TextView
                android:layout_marginTop="26dp"
                android:layout_width="wrap_content"
                android:layout_marginStart="33dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/username"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_marginTop="3dp"
                android:layout_marginStart="33dp"
                android:textSize="14sp"
                android:inputType="text"
                android:paddingTop="12.5dp"
                android:paddingEnd="17dp"
                android:paddingStart="17dp"
                android:paddingBottom="12.5dp"
                android:layout_marginEnd="33dp"
                android:background="@drawable/login_input_background"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginTop="17dp"
                android:layout_width="wrap_content"
                android:layout_marginStart="33dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/password"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_marginTop="3dp"
                android:layout_marginStart="33dp"
                android:paddingTop="12.5dp"
                android:paddingBottom="12.5dp"
                android:layout_marginEnd="33dp"
                android:paddingStart="17dp"
                android:paddingEnd="17dp"
                android:inputType="textPassword"
                android:background="@drawable/login_input_background"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lupa_password"
                android:layout_marginEnd="33dp"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/colorBlue"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btnlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                app:cornerRadius="10dp"
                app:backgroundTint="@color/colorBlue"
                android:backgroundTint="@color/colorBlue"
                android:text="@string/masuk"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:textSize="12sp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="33dp"
                android:layout_marginStart="33dp"
                android:stateListAnimator="@null"
                android:textColor="@color/colorWhite"
                tools:ignore="UnusedAttribute" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="58dp"
                android:textSize="10sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorBlue"
                android:textStyle="bold"
                android:text="@string/belum_memiliki_akun"
                tools:ignore="SmallSp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="10sp"
                android:layout_marginBottom="41dp"
                android:layout_marginTop="10dp"
                android:text="@string/hubungi_pihak_sekolah_untuk_mendapatkan_akses_aplikasi"
                tools:ignore="SmallSp" />
            <TextView
                android:id="@+id/version_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                tools:ignore="SmallSp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>