<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".fragments.BerandaFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/akun_image_profile"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="80dp"
            android:layout_height="80dp"/>
        <TextView
            android:id="@+id/akun_btn_ubah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorBlue"
            android:layout_marginTop="9dp"
            android:textSize="10sp"
            android:text="@string/ubah_profile"
            tools:ignore="SmallSp" />
        <com.google.android.material.card.MaterialCardView
            android:layout_marginTop="15dp"
            android:layout_marginRight="19.5dp"
            android:layout_marginLeft="19.5dp"
            android:layout_marginBottom="7dp"
            app:cardElevation="2.5dp"
            android:outlineSpotShadowColor="@color/colorBlue"
            android:outlineAmbientShadowColor="@color/colorBlue"
            app:cardCornerRadius="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UnusedAttribute">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="29.5dp"
                android:paddingRight="29.5dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data_pribadi"
                        android:textSize="14sp"
                        android:id="@+id/title"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/btn_ubah_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignBottom="@id/title"
                        android:textColor="@color/colorBlue"
                        android:textSize="12sp"
                        android:text="@string/ubah_data"/>
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGreyNorm"
                    android:text="@string/nis"
                    android:textSize="10sp"
                    android:layout_marginTop="15dp"
                    tools:ignore="SmallSp" />
                <TextView
                    android:id="@+id/akun_nis"
                    android:textIsSelectable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGreyNorm"
                    android:text="@string/nama"
                    android:textSize="10sp"
                    android:layout_marginTop="15dp"
                    tools:ignore="SmallSp" />
                <TextView
                    android:id="@+id/akun_nama"
                    android:textIsSelectable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kelas"
                    android:textColor="@color/colorGreyNorm"
                    android:textSize="10sp"
                    android:layout_marginTop="18dp"
                    tools:ignore="SmallSp" />
                <TextView
                    android:id="@+id/akun_kelas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textIsSelectable="true"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agama"
                    android:textColor="@color/colorGreyNorm"
                    android:textSize="10sp"
                    android:layout_marginTop="18dp"
                    tools:ignore="SmallSp" />
                <TextView
                    android:id="@+id/akun_agama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textIsSelectable="true"
                    android:textSize="14sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tempat_lahir"
                    android:textColor="@color/colorGreyNorm"
                    android:textSize="10sp"
                    android:layout_marginTop="18dp"
                    tools:ignore="SmallSp" />
                <TextView
                    android:id="@+id/akun_tmpt_lahir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textIsSelectable="true"
                    android:textSize="14sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tanggal_lahir"
                    android:textColor="@color/colorGreyNorm"
                    android:textSize="10sp"
                    android:layout_marginTop="18dp"
                    tools:ignore="SmallSp" />
                <TextView
                    android:id="@+id/akun_tgl_lahir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textIsSelectable="true"
                    android:textSize="14sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jenis_kelamin"
                    android:textColor="@color/colorGreyNorm"
                    android:textSize="10sp"
                    android:layout_marginTop="18dp"
                    tools:ignore="SmallSp" />
                <TextView
                    android:id="@+id/akun_jk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textIsSelectable="true"
                    android:textSize="14sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/colorGreyNorm"
                    android:textSize="10sp"
                    android:layout_marginTop="18dp"
                    tools:ignore="SmallSp" />
                <TextView
                    android:id="@+id/akun_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textIsSelectable="true"
                    android:textSize="14sp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_marginTop="7dp"
            android:layout_marginRight="19.5dp"
            android:layout_marginLeft="19.5dp"
            android:layout_marginBottom="7dp"
            app:cardElevation="2.5dp"
            android:outlineSpotShadowColor="@color/colorBlue"
            android:outlineAmbientShadowColor="@color/colorBlue"
            app:cardCornerRadius="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UnusedAttribute">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="29.5dp"
                android:paddingRight="29.5dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keamanan_akun"
                    android:textSize="14sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGreyNorm"
                    android:text="@string/username"
                    android:textSize="10sp"
                    android:layout_marginTop="15dp"
                    tools:ignore="SmallSp" />
                <TextView
                    android:id="@+id/akun_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true"
                    android:layout_marginTop="8dp"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorGreyNorm"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textSize="10sp"
                    android:layout_marginTop="18dp"
                    tools:ignore="SmallSp" />
                <TextView
                    android:id="@+id/akun_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="14sp"
                    android:text="@string/bintang"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/fingerprint_trigger"
            android:layout_width="match_parent"
            android:layout_marginTop="7dp"
            android:layout_marginRight="19.5dp"
            android:layout_marginLeft="19.5dp"
            android:layout_marginBottom="7dp"
            app:cardElevation="2.5dp"
            android:outlineSpotShadowColor="@color/colorBlue"
            android:outlineAmbientShadowColor="@color/colorBlue"
            android:layout_height="wrap_content"
            tools:ignore="UnusedAttribute">
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/fingerprint_toggle"
                android:layout_width="match_parent"
                android:layout_marginStart="20dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:enabled="false"
                android:clickable="false"
                android:focusable="false"
                app:buttonTint="@color/colorPrimary"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:textSize="12sp"
                android:text="@string/login_menggunakan_sidik_jari"/>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/btn_keluar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorRed"
            android:text="@string/keluar"/>
    </LinearLayout>
</ScrollView>