<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:id="@+id/layout_kompetensi"
    android:orientation="vertical"
    tools:context=".fragments.BerandaFragment">
    <TextView
        android:id="@+id/kompetensi_tgl"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorGreyNorm"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:textSize="10sp"
        tools:ignore="SmallSp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:text="@string/kompetensi_dasar"/>
    <TextView
        android:id="@+id/kompetensi_dasar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:textSize="14sp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:text="@string/pelaksanaan"/>
    <TextView
        android:id="@+id/kompetensi_pelaksanaan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:textSize="14sp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        />
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/layout_file"
        android:layout_width="match_parent"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/colorLightBlue"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="10dp"
        tools:ignore="UnusedAttribute">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:text="@string/nilai"
                tools:ignore="SmallSp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:id="@+id/layout_nilai"
                    android:layout_alignBottom="@id/kompetensi_file"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/kompetensi_nilai"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:textColor="@color/colorBlue"
                        android:text="0"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_100"/>
                </LinearLayout>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/kompetensi_file"
                    android:stateListAnimator="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:insetTop="7.5dp"
                    android:insetBottom="7.5dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:layout_alignParentEnd="true"
                    android:textAllCaps="false"
                    android:textSize="10sp"
                    app:cornerRadius="100dp"
                    app:iconSize="16dp"
                    app:icon="@drawable/ic_photo"
                    android:text="Lihat Penilaian"
                    tools:ignore="SmallSp" />
            </RelativeLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_marginTop="10dp"
        android:background="#EAEAEA"/>
</LinearLayout>
